[tool.poetry]
name = "twitter-analytics"
version = "1.0.0"
description = "Comprehensive Twitter archive analytics toolkit with insights and visualizations"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
keywords = ["twitter", "analytics", "data-analysis", "social-media", "visualization"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.0"
plotly = "^5.17.0"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = ">=3.8.1,<4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
twitter-analyzer = "analyzer:main"
twitter-dashboard = "dashboard:main"
twitter-export = "exporter:main"

